--- a/index.html
+++ b/index.html
@@ -340,11 +340,11 @@
                                     <div class="video-container">
                                         <span class="play_btn"><img src="./img/play-btn.png" alt="play icon"> </span>
                                         <video id="video" preload="metadata" poster="./img/video_poster.jpg">
-                                            <source src="http://htmlbook.ru/example/video/duel.ogv"
+                                            <source src="#"
                                                 type='video/ogg; codecs="theora, vorbis"'>
-                                            <source src="http://htmlbook.ru/example/video/duel.mp4"
+                                            <source src="#"
                                                 type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
-                                            <source src="http://htmlbook.ru/example/video/duel.webm"
+                                            <source src="#"
                                                 type='video/webm; codecs="vp8, vorbis"'>
                                             Your browser does not support the video element. Kindly,update it to the
                                             latest version.
